# RAG-Engine

./: .env  .gitignore  CITAS_PAPER_CHUNKRAG.md  COHERE_RERANK_IMPLEMENTATION.md  COHERE_RERANK_USAGE.md  README.md  TECNICAS_IMPLEMENTADAS.md  compare_pipelines.py  config.py  demo_filtering.py  pyproject.toml  qdrant_client_wrapper.py  requirements.txt  test_rerank_bedrock.py  test_rerank_simple.py
chunking_inicial_prueba/: llama_chunk.py
docs/: DSPY_IMPLEMENTATION.md
pipelines/production/: __init__.py  compiled_scorer.json  config.py  rag.py  rag_cohere_rerank.py  rag_dspy.py  rag_only_rerank.py
scripts/: check_collection.py  debug_raptor_levels.py  ingest.py  ingest_automatic.py  ingest_bedrock.py  query_bedrock.py  query_qdrant.py  test_embedding_dimension.py  test_improvements.py  train_dspy.py
src/: __init__.py
src/chunking/: __init__.py  chonkie_chunk.py  semantic_chunk.py
src/clustering/: __init__.py  raptor_clustering.py
src/embeddings/: __init__.py  cohere_bedrock.py  cohere_chonkie.py
src/evaluation/: __init__.py  eval_ragas.py  ground_truth.py
src/filtering/: __init__.py  chunk_filter.py  chunk_filter_dspy.py  reranker.py
src/indexing/: __init__.py  bm25_keywords.py
src/ingestion/: __init__.py  document_processor.py
src/retrieval/: __init__.py  query.py  query_v2_enhanced.py
