[project]
name = "rag-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "chonkie[all,semantic]>=1.5.1",
    "openai",
    "qdrant-client",
    "ragas",
    "datasets",
    "langchain",
    "langchain-openai",
    "llama-index",
    "tiktoken",
    "python-dotenv",
    "dspy-ai>=3.1.0",
    "scikit-learn>=1.8.0",
    "numpy>=2.4.0",
    "boto3>=1.42.25",
    "pypdf>=6.5.0",
    "cohere>=5.20.1",
]
